--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,17 @@ body, input[type="text"], button {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.nav-item{
+  text-decoration: none;
+  color: #3f525c;
+  margin: 3px;
+  width: 100%;
+  padding: 8px;
+  background-color: #eeeeee;
+  border-radius: 5px 5px;
+}
+
+.nav-item:hover{
+  text-decoration: underline;
+}
