--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="hero">
 
-  <h2>Les détails du héro {{hero.name | uppercase}} </h2>
+  <h2 class="titre">Les détails du héro {{hero.name | uppercase}} </h2>
   <div><span>id: </span>{{hero.id}}</div>
   <div>
     <label>name:
       <input [(ngModel)]="hero.name" placeholder="name"/>
     </label>
   </div>
-
+  <button class="btn" (click)="save()">Enregistrer</button>
 </div>
+<button class="btn" (click)="goBack()">Retourner</button>
