--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,4 +1,13 @@
 /* HeroesComponent's private CSS styles */
+a{
+  text-decoration: none;
+  color: #405061;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.titre{
+  color: #405061;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -41,4 +50,39 @@
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+.btn{
+  position: relative;
+  margin-top: 10px;
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-radius: 8px 8px;
+}
+input{
+  width: 180px;
+  height: 30px;
+  margin: 5px;
+  border: 0.5px solid #EEE;
+  border-radius: 8px 8px;
+}
+input:focus{
+  border-radius: 8px 8px;
+  border: 1px solid #369;
+}
+input:hover{
+  border-radius: 8px 8px;
+  border: 0.4px solid #369;
+}
+.delete{
+  position: absolute;
+  right: 3px;
+  top: 7px;
+  border: none;
+  color: red;
+  font-size: large;
+  font-weight: bold;
+}
+.delete{
+  background-color:inherit;
 }
